tests/NormalTests/paczka1/fuzzy1/32084418.err
Error in line 10: JU1 A491 96,9
Error in line 12: shzVEP6 S337 84,1
Error in line 13: shzVEP6 A968 76,4
Error in line 26: S337 A491 77,1
Error in line 29: S337 A968 45,7
Error in line 24: sc2EQU S337 54,5
Error in line 33: S337 A491 28,5
Error in line 32: SI3 S337 94,8
